# geometry2h3

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
geometry2h3/: __init__.py  build_h3_strtree_api.py  center_radius_shape.py  fill_h3_api.py  fill_h3_nearest_h3_api.py  geometry.py  geometry_h3.py  polyline_shape.py  tile_shape.py  to_shapely_api.py
tests/: test_build_h3_strtree_api.py  test_fill_h3_api.py  test_fill_h3_nearest_h3_api.py  test_geometry_h3_list_bbox.py  test_geometry_h3_list_center_radius.py  test_geometry_h3_list_geojson.py  test_geometry_h3_list_polyline.py  test_geometry_h3_list_shapely.py  test_geometry_h3_list_tile.py  test_geometry_h3_list_wkt.py  test_geometry_h3_set_bbox.py  test_geometry_h3_set_center_radius.py  test_geometry_h3_set_geojson.py  test_geometry_h3_set_polyline.py  test_geometry_h3_set_shapely.py  test_geometry_h3_set_tile.py  test_geometry_h3_set_wkt.py  test_geometry_set_bbox.py  test_geometry_set_center_radius.py  test_geometry_set_geojson.py  test_geometry_set_polyline.py  test_geometry_set_shapely.py  test_geometry_set_tile.py  test_geometry_set_wkt.py  test_set_shapely_fill_h3.py  test_shapely_geometry_api.py  test_to_shapely_api.py
